# DuelTopicRandomizer

./: .travis.yml  CMakeLists.txt  README.md  cli.cpp  cli.h  main.cpp  randomizer.cpp  randomizer.h
test/: topics.txt
